# fleet-monitor-embedded

./: .clang-format  README.md
Firmware/FleetMonitor/: platformio.ini
Firmware/FleetMonitor_V0.1/: CMakeLists.txt  partitions_custom.csv  platformio.ini
TestPrograms/Blink/: platformio.ini
TestPrograms/ESP32-Arduino/: platformio.ini
TestPrograms/ESP32-Arduino_DFU/: CMakeLists.txt  platformio.ini
TestPrograms/ESP32-Arduino_USB/: CMakeLists.txt  platformio.ini
TestPrograms/ESP32-Arduino_USB_Ext_Libs/: CMakeLists.txt  platformio.ini
TestPrograms/ESP32-Arduino_USB_MSC/: CMakeLists.txt
TestPrograms/ESP32-Arduino_USB_MSC_Flash/: CMakeLists.txt  partitions_custom.csv  platformio.ini
TestPrograms/ETH-Test/: platformio.ini  sdkconfig.esp32-s2-saola-1  sdkconfig.esp32-s2-saola-1.old
TestPrograms/File_Serving/: CMakeLists.txt  platformio.ini  sdkconfig.esp32-s2-saola-1
TestPrograms/File_Serving/src/: CMakeLists.txt
TestPrograms/Network/: CMakeLists.txt  platformio.ini
TestPrograms/SoftAP/: platformio.ini  sdkconfig.esp32-s2-saola-1
TestPrograms/Storage_SPIFFS/: platformio.ini  sdkconfig.esp32-s2-saola-1
TestPrograms/TUSB_Logger/: platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s2-saola-1  sdkconfig.esp32-s2-saola-1.old
TestPrograms/TUSB_MSC/: CMakeLists.txt  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s2-saola-1
TestPrograms/TUSB_MSC_Wireless_Disk/: CMakeLists.txt  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s2-saola-1
TestPrograms/TUSB_SPIFFS/: CMakeLists.txt  platformio.ini  sdkconfig.esp32-s2-saola-1  (+1 more)
(+145 files in other folders)
